arreglo de boton

--- a/login/templates/pedido_granja.html
+++ b/login/templates/pedido_granja.html
@@ -327,7 +327,7 @@
                             </table>
                         </div>
                         <button id="solicitarPedido" class="btn  btn-outline-info btn-lg"
-                            style="float: right; margin-top: 2%; margin-bottom: 7%;">
+                            style=" right: auto; margin-top: 2%; margin-bottom: 7%;">
                             <b>Solicitar</b>
                         </button>
                     </div>
