--- a/login/templates/remision_pdf.html
+++ b/login/templates/remision_pdf.html
@@ -190,7 +190,7 @@
         <td style="width: 20.1354%; height: 15px;">&nbsp;Despachado Por:</td>
         <td style="width: 16.7966%; height: 15px;">Fecha y Hora Llegada:</td>
         <td style="width: 20.5639%; height: 15px;">Recibido Por:</td>
-        <td style="width: 27.7724%; height: 15px;">Cantidad Total: <strong>{{totalcerdos}}</strong></td>
+        <td style="width: 27.7724%; height: 15px;">Cantidad Total: <strong>{{total_cerdos}}</strong></td>
         </tr>
         <tr style="height: 65px;">
         <td style="width: 17.4969%; height: 65px;">&nbsp;</td>
