cambios realizados Gus

--- a/login/templates/despacho_frigos.html
+++ b/login/templates/despacho_frigos.html
@@ -191,7 +191,7 @@
 
                                         <!-- Frigorífico -->
                                         <div class="form-group">
-                                            <label for="frigorifico_id">Granja:</label>
+                                            <label for="frigorifico_id">Frigorifico:</label>
                                             <input type="text" class="form-control" id="frigorifico_id"
                                                 name="frigorifico_id" required readonly>
                                         </div>
